Improve semantic HTML

--- a/style.css
+++ b/style.css
@@ -178,6 +178,15 @@ body {
     max-height: 1rem;
 }
 
+.visually-hidden:not(:focus):not(:active):not(:focus-within) {
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap; 
+    width: 1px;
+}
+
 @media (min-width: 39.4rem) {
     body {
         align-items: center;
